2009-01-26  Bill Wohler  <wohler@newt.com>

	* mh-utils.el (mh-goto-header-end): Use mh-mail-header-separator
	instead of -* in regexp.

	* mh-folder.el (mh-folder-mode-help-messages): Add e and t to K's
	help.

2009-01-09  Glenn Morris  <rgm@gnu.org>

	* mh-letter.el: Replace last-input-char with last-input-event.

2008-08-18  Bill Wohler  <wohler@newt.com>

	Release MH-E version 8.1.

	* mh-e.el (Version, mh-version): Update for release 8.1.

2008-08-11  Bill Wohler  <wohler@newt.com>

	* mh-e.el (mh-variant-mh-info, mh-variant-nmh-info)
	(mh-variant-set-variant, mh-variant-p, mh-profile-component)
	(mh-variant-set, mh-variant, mh-scan-format-file): Fix typo in
	docstring.

	* mh-comp.el (mh-reply)
	* mh-e.el (mh-sys-path, mh-variant-info,mh-variant-mu-mh-info)
	(mh-variant-p, mh-profile-component, mh-variant-set, mh-variant)
	(mh-scan-format-file)
	* mh-folder.el (mh-regenerate-headers)
	* mh-scan.el (mh-scan-format)
	* mh-search.el (mh-pick-regexp-builder): Rename variant mu-mh to
	gnu-mh and be explicit about GNU mailutils MH in docstrings (with
	thanks to Darel Henman) (closes SF #1768928).

2008-08-01  Bill Wohler  <wohler@newt.com>

	* mh-show.el (mh-show-preferred-alternative)
	* mh-e.el (mh-annotate-msg-hook): Sync docstring with manual.

	* mh-comp.el (mh-send-letter, mh-redistribute): Mention
	mh-annotate-msg-hook in docstring.

2008-06-29  Jeffrey C Honig  <jch@honig.net>

	* mh-e.el (mh-invisible-header-fields-internal): Add invisible
	header fields for X-Hz (mail from Hertz), X-Proofpoint (Proofpoint
	antivirus/anti-spam) and X-RIM (Research In Motion).

2008-06-20  Stephen Eglen  <stephen@gnu.org>

	* mh-show.el (mh-defun-show-buffer): Use `...' rather than than
	"..." in generated docstrings.

2008-06-12  Glenn Morris  <rgm@gnu.org>

	* mh-seq.el (tool-bar-map): Define for compiler.

	* mh-folder.el (mh-folder-mode):
	* mh-letter.el (mh-letter-mode):
	* mh-show.el (mh-show-mode): Check tool-bar-map is bound.
